--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "react-native-gesture-handler": "~2.9.0",
   "react-native-reanimated": "~2.14.4",
   "react-native-svg": "13.4.0",
-  "react-native-web": "~0.18.11"
+  "react-native-web": "~0.18.11",
+  "vercel": "^33.0.1"
  },
  "devDependencies": {
   "@babel/core": "^7.20.0"
