--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
  },
  "dependencies": {
   "@expo/webpack-config": "^18.0.1",
-  "expo": "^48.0.0",
+  "expo": "49",
   "expo-font": "~11.1.1",
   "expo-linear-gradient": "~12.1.2",
   "expo-status-bar": "~1.4.4",
