--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "eject": "expo eject"
  },
  "dependencies": {
-  "@expo/webpack-config": "^18.0.1",
+  "@expo/webpack-config": "^19.0.0",
+  "@gorhom/portal": "^1.0.14",
+  "@types/react": "~18.2.14",
   "expo": "49",
+  "expo-blur": "~12.4.1",
   "expo-font": "~11.1.1",
   "expo-linear-gradient": "~12.1.2",
   "expo-status-bar": "~1.4.4",
@@ -21,12 +24,16 @@
   "react-native": "0.71.8",
   "react-native-gesture-handler": "~2.9.0",
   "react-native-reanimated": "~2.14.4",
+  "react-native-render-html": "^6.3.4",
   "react-native-svg": "13.4.0",
   "react-native-web": "~0.18.11",
+  "react-responsive": "^9.0.2",
   "vercel": "^33.0.1"
  },
  "devDependencies": {
-  "@babel/core": "^7.20.0"
+  "@babel/core": "^7.20.0",
+  "ts-node": "^10.9.2",
+  "typescript": "^5.3.3"
  },
  "private": true
 }
