--- a/package.json
+++ b/package.json
@@ -1,39 +1,47 @@
 {
- "name": "animation-app",
- "version": "1.0.0",
- "main": "node_modules/expo/AppEntry.js",
- "scripts": {
-  "start": "expo start",
-  "android": "expo start --android",
-  "ios": "expo start --ios",
-  "web": "expo start --web",
-  "eject": "expo eject"
- },
- "dependencies": {
-  "@expo/webpack-config": "^19.0.0",
-  "@gorhom/portal": "^1.0.14",
-  "@types/react": "~18.2.14",
-  "expo": "49",
-  "expo-blur": "~12.4.1",
-  "expo-font": "~11.1.1",
-  "expo-linear-gradient": "~12.1.2",
-  "expo-status-bar": "~1.4.4",
-  "expo-updates": "~0.16.4",
-  "react": "18.2.0",
-  "react-dom": "18.2.0",
-  "react-native": "0.71.8",
-  "react-native-gesture-handler": "~2.9.0",
-  "react-native-reanimated": "~2.14.4",
-  "react-native-render-html": "^6.3.4",
-  "react-native-svg": "13.4.0",
-  "react-native-web": "~0.18.11",
-  "react-responsive": "^9.0.2",
-  "vercel": "^33.0.1"
- },
- "devDependencies": {
-  "@babel/core": "^7.20.0",
-  "ts-node": "^10.9.2",
-  "typescript": "^5.3.3"
- },
- "private": true
+  "name": "animation-app",
+  "version": "1.0.0",
+  "main": "expo-router/entry",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
+  },
+  "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
+    "@gorhom/portal": "^1.0.14",
+    "@types/react": "~18.2.14",
+    "expo": "49",
+    "expo-blur": "~12.4.1",
+    "expo-constants": "~14.4.2",
+    "expo-font": "~11.1.1",
+    "expo-linear-gradient": "~12.1.2",
+    "expo-linking": "~5.0.2",
+    "expo-router": "^2.0.0",
+    "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.16.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.11",
+    "react-responsive": "^9.0.2",
+    "vercel": "^33.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  },
+  "resolutions": {
+    "react-refresh": "~0.14.0"
+  },
+  "private": true
 }
