--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "eject": "expo eject"
  },
  "dependencies": {
+  "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
   "@expo/webpack-config": "^19.0.0",
   "@gorhom/portal": "^1.0.14",
   "@types/react": "~18.2.14",
@@ -23,7 +24,7 @@
   "react-dom": "18.2.0",
   "react-native": "0.71.8",
   "react-native-gesture-handler": "~2.9.0",
-  "react-native-reanimated": "~2.14.4",
+  "react-native-reanimated": "~3.3.0",
   "react-native-render-html": "^6.3.4",
   "react-native-svg": "13.4.0",
   "react-native-web": "~0.18.11",
