--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "background_color": "#ffffff",
   "display": "standalone",
   "lang": "en",
-  "name": "Reactive-4Twiggers-Animation",
-  "short_name": "Reactive-4Twiggers-Animation",
+  "name": "sssajjad007",
+  "short_name": "sssajjad007",
   "start_url": "/?utm_source=web_app_manifest",
   "orientation": "portrait"
 }
