--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Reactive-4Twiggers-Animation",
-    "slug": "Reactive-4Twiggers-Animation",
+    "name": "sssajjad007",
+    "slug": "sssajjad007",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
