--- a/package.json
+++ b/package.json
@@ -1,40 +1,43 @@
 {
- "name": "animation-app",
- "version": "1.0.0",
- "main": "node_modules/expo/AppEntry.js",
- "scripts": {
-  "start": "expo start",
-  "android": "expo start --android",
-  "ios": "expo start --ios",
-  "web": "expo start --web",
-  "eject": "expo eject"
- },
- "dependencies": {
-  "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-  "@expo/webpack-config": "^19.0.0",
-  "@gorhom/portal": "^1.0.14",
-  "@types/react": "~18.2.14",
-  "expo": "49",
-  "expo-blur": "~12.4.1",
-  "expo-font": "~11.1.1",
-  "expo-linear-gradient": "~12.1.2",
-  "expo-status-bar": "~1.4.4",
-  "expo-updates": "~0.16.4",
-  "react": "18.2.0",
-  "react-dom": "18.2.0",
-  "react-native": "0.71.8",
-  "react-native-gesture-handler": "~2.9.0",
-  "react-native-reanimated": "~3.3.0",
-  "react-native-render-html": "^6.3.4",
-  "react-native-svg": "13.4.0",
-  "react-native-web": "~0.18.11",
-  "react-responsive": "^9.0.2",
-  "vercel": "^33.0.1"
- },
- "devDependencies": {
-  "@babel/core": "^7.20.0",
-  "ts-node": "^10.9.2",
-  "typescript": "^5.3.3"
- },
- "private": true
+  "name": "portfolio",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "homepage": "https://sssajjad007.github.io/",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject",
+    "deploy": "gh-pages -d web-build",
+    "predeploy": "expo export:web"
+  },
+  "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@expo/webpack-config": "^19.0.0",
+    "@types/react": "~18.2.14",
+    "expo": "49",
+    "expo-font": "~11.1.1",
+    "expo-image": "~1.3.5",
+    "expo-linear-gradient": "~12.1.2",
+    "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-render-html": "^6.3.4",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.11",
+    "react-responsive": "^9.0.2",
+    "vercel": "^33.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "gh-pages": "^6.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  },
+  "private": true
 }
